# docker-compose-health-dashboard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: branch-protection-main.json
.github/workflows/: ci.yml
compose_health/: __init__.py  cli.py  models.py  parser.py  renderer.py  risk_engine.py
tests/: test_parser.py  test_risk_engine.py
tests/fixtures/: plex-compose.yml  risky-compose.yml
