[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-compose-health-dashboard"
version = "0.1.0"
description = "Static Docker Compose health, exposure, configuration, and risk dashboard for the terminal."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kyle Hiatt" }]
keywords = ["docker", "compose", "homelab", "healthcheck", "security", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.26.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
compose-health = "compose_health.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["compose_health"]

[tool.ruff]
line-length = 100
target-version = "py311"
